<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="20dp"
    android:layout_height="wrap_content"
    android:background="@drawable/background_white">

    <soup.neumorphism.NeumorphTextView
        android:id="@+id/neumorphTextView"
        android:layout_width="330dp"
        android:layout_height="83dp"
        android:layout_marginTop="28dp"
        android:text="@string/dialog_amount_text"
        android:textColor="@color/text_color"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <soup.neumorphism.NeumorphCardView
        android:id="@+id/neumorphCardView24"
        style="@style/Widget.Neumorph.CardView"
        android:layout_width="354dp"
        android:layout_height="89dp"
        android:layout_marginTop="28dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/neumorphTextView"
        app:neumorph_shapeType="pressed">

        <EditText
            android:id="@+id/dialog_amount_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="@string/app_name"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/icon_numbers"
            android:drawablePadding="10dp"
            android:hint="@string/dialog_amount_hint"
            android:inputType="number"
            android:textColor="@color/text_color"
            android:textColorHint="@color/darker_gray" />
    </soup.neumorphism.NeumorphCardView>

    <soup.neumorphism.NeumorphButton
        android:id="@+id/dialog_amount_accept"
        android:layout_width="262dp"
        android:layout_height="77dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/dialog_soe_accept"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/neumorphCardView24" />


</androidx.constraintlayout.widget.ConstraintLayout>