<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_ligth"
    tools:context=".Views.Dashboard">

    <soup.neumorphism.NeumorphCardView
        android:id="@+id/ds_out"
        style="@style/Widget.Neumorph.Button"
        android:layout_width="177dp"
        android:layout_height="151dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:src="@drawable/icon_exit_alm" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/ds_ro"
                android:textColor="@color/text_color" />

        </LinearLayout>
    </soup.neumorphism.NeumorphCardView>


    <soup.neumorphism.NeumorphCardView
        android:id="@+id/ds_r_worker"
        style="@style/Widget.Neumorph.Button"
        android:layout_width="177dp"
        android:layout_height="151dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:src="@drawable/icon_worker" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/ds_rw"
                android:textColor="@color/text_color" />


        </LinearLayout>

    </soup.neumorphism.NeumorphCardView>

    <soup.neumorphism.NeumorphCardView
        android:id="@+id/ds_r_regin"
        style="@style/Widget.Neumorph.Button"
        android:layout_width="177dp"
        android:layout_height="151dp"
        android:layout_below="@+id/ds_r_worker"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:src="@drawable/icon_inventary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/ds_ri"
                android:textColor="@color/text_color" />


        </LinearLayout>

    </soup.neumorphism.NeumorphCardView>

    <soup.neumorphism.NeumorphCardView
        android:id="@+id/ds_r_ediin"
        style="@style/Widget.Neumorph.Button"
        android:layout_width="177dp"
        android:layout_height="151dp"
        android:layout_below="@+id/ds_r_worker"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:src="@drawable/icon_edit" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/ds_ei"
                android:textColor="@color/text_color" />


        </LinearLayout>

    </soup.neumorphism.NeumorphCardView>

</RelativeLayout>