<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_ligth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <soup.neumorphism.NeumorphCardView
            style="@style/Widget.Neumorph.CardView"
            android:id="@+id/imageView4"
            android:layout_width="244dp"
            android:layout_height="289dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
                android:id="@+id/imageView5"
                android:layout_width="186dp"
                android:layout_height="206dp"
                android:background="@drawable/logo"
                app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                app:layout_constraintEnd_toEndOf="@+id/imageView4"
                app:layout_constraintStart_toStartOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="@+id/imageView4"
                android:contentDescription="@string/app_name" />


        <soup.neumorphism.NeumorphCardView
            android:id="@+id/neumorphCardView"
            style="@style/Widget.Neumorph.CardView"
            android:layout_width="354dp"
            android:layout_height="89dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:neumorph_shapeType="pressed">

            <EditText
                android:id="@+id/inputCorreo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="@string/app_name"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/login_icon_email"
                android:drawablePadding="10dp"
                android:hint="@string/main_hint_email"
                android:inputType="textWebEmailAddress"
                android:textColor="@color/text_color"
                android:textColorHint="@color/darker_gray" />


        </soup.neumorphism.NeumorphCardView>

        <soup.neumorphism.NeumorphCardView
            android:id="@+id/neumorphCardView2"
            style="@style/Widget.Neumorph.CardView"
            android:layout_width="354dp"
            android:layout_height="89dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailError"
            app:neumorph_shapeType="pressed">

            <EditText
                android:id="@+id/inputPass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="no"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/login_icon_pass"
                android:drawablePadding="10dp"

                android:hint="@string/main_hint_pass"
                android:inputType="textPassword"
                android:textColor="@color/text_color"
                android:textColorHint="@color/darker_gray" />


        </soup.neumorphism.NeumorphCardView>

        <soup.neumorphism.NeumorphButton
            android:id="@+id/loginButton"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="245dp"
            android:layout_height="63dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/main_hint_button"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.518"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passError" />

        <TextView
            android:id="@+id/emailError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="@color/danger"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.073"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/neumorphCardView" />

        <TextView
            android:id="@+id/passError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="@color/danger"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.079"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/neumorphCardView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>